# gpd_interface

./: CMakeLists.txt  package.xml
include/gpd_interface/: construct_point_cloud.hpp  grasp_unknown_object.hpp  move_to_nbv.hpp
launch/: gpd.launch  launcher.bash  nbv.launch  start.launch
src/: construct_point_cloud.cpp  gpd_node.cpp  grasp_unknown_object.cpp  grasp_unknown_object_node.cpp  move_to_nbv.cpp  move_to_nbv_node.cpp  post_point_cloud_node.cpp
srv/: getPointCloud.srv
test/: test_point_cloud_merge.cpp
