<?xml version="1.0"?>
<package format="2">
        <name>gpd_interface</name>
        <version>0.0.0</version>
        <description>gpd interface</description>
        <maintainer email="mitre@iti.gr">Giorgos Mitrentsis</maintainer>
        <license>BSD</license>

        <buildtool_depend>catkin</buildtool_depend>


	<depend>roscpp</depend>
        <depend>std_msgs</depend>
        <depend>sensor_msgs</depend>
        <depend>message_generation</depend>
        <depend>moveit_core</depend>
        <depend>moveit_ros_planning_interface</depend>
        <depend>moveit_msgs</depend>
        <depend>moveit_visual_tools</depend>
        <depend>moveit_ros_move_group</depend>
	<depend>actionlib</depend>
	<depend>message_runtime</depend>
	<depend>robot_helpers</depend>
        <depend>cvx_util</depend> 
        <depend>clopema_robot</depend>
	<depend>camera_helpers</depend>
	<depend>gpd</depend>
        <depend>basic_next_best_view</depend>



</package>
